find Category by id, exception handling